_includes/style.css
/* ... */
@media (max-width: 54em) {
    .subscribe h1 {
        font-size: 1.5em;
    }
    img {
        /* Prevent downsized pixelated scale */
        image-rendering: auto;
    }
    .image {
        display: block;
        text-align: center;
    }
    .image:before {
        display: none;
    }
    .card {
        width: calc(100% + 4.2em);
        margin: 0 -2.1em;
        background-color: transparent;
        box-shadow: none;
    }
    .card .content {
        min-width: 0;
        padding-right: 2.8em;
        padding-left: 2.8em;
        background-color: #fff;
    }
    .image + .content {
        padding-left: 2em;
    }
    .sheet {
        width: calc(100% + 5.6em);
        margin: 1em -2.8em;
    }
    .row {
        display: block;
        padding: .6em 2.8em;
    }
    .column {
        display: table-row;
    }
    .items li {
        min-width: 16em;
        min-height: 16em;
    }
    .image img {
            width: auto;
        max-width: 100%;
        max-height: 50vh;
    }

    .logo {
        position: relative;
        z-index: -1;
    }
    .nav > .active:after {
        display: none;
        box-suppress: discard;
    }
    .nav-container {
        direction: ltr;
        overflow: auto;
        overscroll-behavior: contain;
        position: fixed;
        top: 0;
        left: 0;
        bottom: 0;
        width: 72%;
        min-width: 9em;
        padding: 3.5em 0;
        text-align: right;
        -webkit-transform: translateX(-100%);
                transform: translateX(-100%);
        will-change: auto;
    }
    .nav li,
    .subnav.subnav li:first-child {
        direction: rtl;
        float: none;
        border-top: 1px solid #eee;
    }
    .nav li:first-child {
        border-top: 0;
    }
    .nav a {
        padding-right: 2.3em;
    }
    .nav > .active.active > a {
        color: inherit;
    }
    .nav.nav a:hover,
    .nav.nav a:focus,
    .subactive.subactive > a {
        background-color: #f8f8f9;
    }
    .nav > .active:not(.subactive) > a {
        color: #fff;
        background-color: #569e9b;
    }
    .subnav.subnav,
    .subnav-container.subnav-container {
        background-color: initial;
        box-shadow: none;
    }
    .subnav {
        position: static;
        display: block;
    }
    .subnav a {
        padding-right: 3.7em;
    }
    .subnav .active.active > a {
        color: #fff;
        background-color: #569e9b;
    }
    .bar.bar {
        display: inline-block;
        position: absolute;
        left: 0;
        z-index: 3;
        min-width: 0;
            width: auto;
        height: 2.35em;
        padding: .466em;
        font-size: 106%;
        cursor: pointer;
        pointer-events: auto;
    }
    .bar span,
    .bar span:before,
    .bar span:after {
        display: block;
        width: 1.3em;
        height: .211em;
        background-color: #333;
        border-radius: .5em;
        -webkit-transition: width .1s, background-color 1ms, -webkit-transform .35s cubic-bezier(.2,1,.4,1);
                transition: width .1s, background-color 1ms, transform .35s cubic-bezier(.2,1,.4,1);
        will-change: transform;
    }
    .bar span {
        position: relative;
        margin: 1.07em .65em 1.07em .55em;
        -webkit-transform: translateY(0);
                transform: translateY(0); /* Firefox 34 Nightly width fix */
        -webkit-transition-duration: .15s;
                transition-duration: .15s;
    }
    .bar span:before {
        content: "";
        position: absolute;
        right: 0;
        width: 1em;
        -webkit-transform: translateY(-.42em);
                transform: translateY(-.42em);
    }
    .bar span:after {
        content: "";
        position: absolute;
        width: .4em;
        -webkit-transform: translateY(.42em);
                transform: translateY(.42em);
    }
    .bar-holder:checked ~ header .wrapper .bar span {
        background-color: transparent;
    }
    .bar-holder:checked ~ header .wrapper .bar span:before {
        width: 1.3em;
        -webkit-transform: rotate3d(0,0,1,45deg);
                transform: rotate3d(0,0,1,45deg);
    }
    .bar-holder:checked ~ header .wrapper .bar span:after {
        width: 1.3em;
        -webkit-transform: rotate3d(0,0,1,-45deg);
                transform: rotate3d(0,0,1,-45deg);
    }
    .bar-holder:checked ~ header .wrapper .nav-container,
    .bar-holder:checked ~ main .container .nav-container {
        box-shadow: 0 0 4em rgba(51,51,51,.11),
                    0 0 12em rgba(51,51,51,.3);
        -webkit-transform: none;
                transform: none;
        -webkit-transition: -webkit-transform .35s cubic-bezier(.2,1,.4,1);
                transition: transform .35s cubic-bezier(.2,1,.4,1);
    }
    .bar-holder:checked ~ header .wrapper .bar-close {
        display: block;
        position: fixed;
        z-index: -1;
    }
}
@media (max-width: 35em) {
    .wrapline,
    .box .item figure.flow + p {
        display: inherit;
    }
    .wrapline:after {
        display: none;
    }
    .box figure.flow.flow {
        margin-left: -2.1em;
    }
}
@media (max-width: 25em) {
    .items li {
        flex: initial;
        min-width: auto;
    }
    footer a + a {
        margin-right: .8em;
    }
}
@media (prefers-reduced-motion) {
    /* Reduce motion https://drafts.csswg.org/mediaqueries-5/#prefers-reduced-motion
       Supported in Safari 10.1 https://webkit.org/blog/7477/new-web-features-in-safari-10-1/ */
    * {
        animation: none;
        transition: none;
    }
}

